[gd_scene load_steps=11 format=2]

[ext_resource path="res://scripts/cards/global_cards/card_glitchy.gd" type="Script" id=1]
[ext_resource path="res://textures/cards/global_cards/fake_error.png" type="Texture" id=2]

[sub_resource type="Shader" id=1]
code = "shader_type canvas_item;

uniform sampler2D offset_image : hint_white;
uniform float strength = 1.0;

void fragment() {
	vec4 output = texture(SCREEN_TEXTURE, SCREEN_UV);
	
	float shift = strength * texture(offset_image, SCREEN_UV).r / 100.0;
	output.r = texture(SCREEN_TEXTURE, vec2(SCREEN_UV.x + shift, SCREEN_UV.y)).r;
	output.g = texture(SCREEN_TEXTURE, SCREEN_UV).g;
	output.b = texture(SCREEN_TEXTURE, vec2(SCREEN_UV.x - shift, SCREEN_UV.y)).b;
	
	COLOR = output;
}"

[sub_resource type="ShaderMaterial" id=2]
shader = SubResource( 1 )
shader_param/strength = 0.3

[sub_resource type="Animation" id=3]
resource_name = "glitch"
length = 0.5
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("glitch_shader:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("glitch_shader:material:shader_param/strength")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.05, 0.1, 0.15, 0.2, 0.25, 0.3, 0.35, 0.4, 0.45, 0.5 ),
"transitions": PoolRealArray( 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0 ),
"update": 0,
"values": [ 1.0, 0.3, 1.0, 0.3, 1.0, 0.3, 1.0, 0.3, 1.0, 0.3, 1.0 ]
}

[sub_resource type="Gradient" id=4]
offsets = PoolRealArray( 0, 0.255814, 1 )
colors = PoolColorArray( 1, 1, 1, 0, 1, 1, 1, 1, 1, 1, 1, 1 )

[sub_resource type="GradientTexture" id=5]
gradient = SubResource( 4 )

[sub_resource type="Curve" id=6]
_data = [ Vector2( 0, 0.529545 ), 0.0, 6.14141, 0, 0, Vector2( 0.223684, 1 ), 0.0, 0.0, 0, 0, Vector2( 1, 1 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=7]
curve = SubResource( 6 )

[sub_resource type="ParticlesMaterial" id=8]
flag_disable_z = true
gravity = Vector3( 0, 0, 0 )
orbit_velocity = 0.0
orbit_velocity_random = 0.0
scale_curve = SubResource( 7 )
color_ramp = SubResource( 5 )

[node name="card_glitchy" type="Node2D"]
pause_mode = 2
position = Vector2( -50.6441, -49.765 )
scale = Vector2( 1.1, 1.1 )
script = ExtResource( 1 )

[node name="back_timer" type="Timer" parent="."]
autostart = true

[node name="randtp_timer" type="Timer" parent="."]
autostart = true

[node name="pause_timer" type="Timer" parent="."]
autostart = true

[node name="oldpos_timer" type="Timer" parent="."]
autostart = true

[node name="glitch_shader" type="ColorRect" parent="."]
material = SubResource( 2 )
margin_left = -2.57135
margin_top = 16.7135
margin_right = 1277.43
margin_bottom = 736.714
__meta__ = {
"_edit_use_anchors_": false
}

[node name="glitch_anim" type="AnimationPlayer" parent="."]
anims/glitch = SubResource( 3 )

[node name="fake_error" type="Particles2D" parent="."]
position = Vector2( 640, 360 )
emitting = false
amount = 1
one_shot = true
process_material = SubResource( 8 )
texture = ExtResource( 2 )

[connection signal="timeout" from="back_timer" to="." method="_on_back_timer_timeout"]
[connection signal="timeout" from="randtp_timer" to="." method="_on_randtp_timer_timeout"]
[connection signal="timeout" from="pause_timer" to="." method="_on_pause_timer_timeout"]
[connection signal="timeout" from="oldpos_timer" to="." method="_on_oldpos_timer_timeout"]
